# 2025ESWContest_mobility_6099

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEPLOYMENT_GUIDE.md  ESP32-CAN.ino  Makefile  POW-Mirror.ino  POW-Seat.ino  POW-Wheel.ino  README.md  WarningDialog.h  adapter.c  adapter.h  adapter.hpp  adapter_debug.c  adapter_esp32.c  adapter_linux.c  adapterfactory.c  can_api.c  can_api.cpp  can_api.h  canmessage.c  canmessage.cpp  canmessage.h  canmessage.hpp  channel.c  channel.cpp  channel.h  cmake_install.cmake  drowsiness.py  faceauth.py  faceauth_test.py  faceauthpc.py  facedata.py  facemesh_test.py  ipc.cpp  ipc.h  ipc_client.h  json_template.json  linux_adapter.cpp  (+16 more)
.docs/: flowchart.md  prd.md  web-prototype-summary.md  wireframe.md
.legacy/android_mvp/: DEBUG_GUIDE.md  settings.gradle.kts
.legacy/web/: index.html
AuthView/: authwindow.cpp  authwindow.h  authwindow.ui
DCU-Core/: .gitignore  README.md  ipc.cpp  main.cpp
DCU-FE/: README.md  ipc_client.cpp  main.cpp  mainwindow.ui
DCU-FE/AuthView/: authwindow.cpp  authwindow.ui
DCU-FE/MainView/: mainview.ui
DataCheckView/: datacheckwindow.cpp  datacheckwindow.h  datacheckwindow.ui
Library-CAN_ESP32/: can_api.c  canmessage.h
Library-CAN_Linux/: can_api.h  main.c
MainView/: mainview.cpp  mainview.h  mainview.ui  mainview.ui.autosave
POW-Mirror/: POW-Mirror.ino
POW-Seat/: adapter.h  can_api.h  canmessage.h
POW-Wheel/: POW-Wheel.ino
Platform-AI/: .dockerignore  openapi.yml
Platform-AI/docs/: MIGRATION_GUIDE.md
Platform-AI/docs/guides/: DOCKER_SETUP.md
Platform-AI/lambdas/facedata/: download_models.py
Platform-AI/lambdas/measure/: Dockerfile  requirements.txt
Platform-AI/scripts/deploy/: deploy_api_gateway.ps1
Platform-AI/scripts/test/: test_all_endpoints.ps1
Platform-AI/scripts/utils/: fix_s3_permissions.ps1  update_facedata_api.ps1
Platform-AI/src/: measure.py  recommend.py
Platform-Application/: .gitignore
Platform-Application/.legacy/android_mvp/: JPEG_FIX.md  README.md
Platform-Application/.legacy/web/: README.md
Platform-Application/android/: SETUP_GUIDE.md  settings.gradle.kts
Platform-Server/: .env.example  .gitignore  SETUP_GUIDE.md  config.example.json
Platform-Server/database/: init-database.sql
Platform-Server/database/legacy/: temp_init.sql
Platform-Server/lambdas/auth-face/: index.js  package.json
Platform-Server/lambdas/auth-nfc-get/: index.js
Platform-Server/lambdas/auth-session/: index.js
Platform-Server/lambdas/body-upload/: index.js
Platform-Server/lambdas/facedata/: lambda_handler.py
Platform-Server/lambdas/profiles/: deploy.ps1  drop_and_create_table.sql  lambda_handler.py  lambda_handler_backup.py
Platform-Server/lambdas/users/: index.js
Platform-Server/lambdas/vehicle-control/: vehicle-interface.js
Platform-Server/lambdas/vehicles/: README.md  db.js
Platform-Server/scripts/: Test-ApiEndpoints.ps1  Test-Deployment.ps1
PowSeat/main/: CMakeLists.txt  app_main.c  can_node.cpp  can_node.hpp  config.h  relay_hbridge.cpp  relay_hbridge.hpp  relay_module.cpp  relay_module.hpp  seat_node.cpp  seat_node.hpp  state_store.cpp  state_store.hpp  utils.hpp
SCA-AI/: README.md  user1.txt
SCA-Core/: CMakeCache.txt  adapter_debug.cpp  adapter_factory.cpp  can_api.hpp  channel.hpp
SCA-Core/camera/: CMakeLists.txt  camera_adapter.cpp  camera_adapter.hpp  camera_runner.cpp  camera_runner.hpp
SCA-Core/include/: can_ids.hpp  msg_queue.hpp  shared_mem.hpp
SCA-Core/src/: main.cpp
TCU-Core/: .gitmodules  README.md
TCU-Core/config/: tcu_config.json
TCU-Core/include/: tcu_rest_client.h
TCU-Core/src/: tcu_rest_client.c
android/: ARCHITECTURE.md  FEATURES.md  README.md
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
ble/: CMakeLists.txt  ble_adapter.cpp  ble_adapter.hpp  sca_ble_peripheral.cpp  sca_ble_peripheral.hpp
camera/: camera_adapter.cpp  camera_adapter.hpp  camera_runner.cpp  camera_runner.hpp
config/: app_config.h
database/legacy/: seeds.sql  unified-schema.sql
docs/: openapi.yaml
docs/archived/: FINAL_FIX.md  FIX_GUIDE.md  README_LAMBDA.md
docs/guides/: DEPLOYMENT.md  QUICKSTART.md  TEST_SCENARIOS.md
docs/improvements/: FACEDATA_LAMBDA.md  MEASURE_IMPROVEMENTS.md  RECOMMEND_S3_MODEL.md
docs/legacy/: openapi-unified.yaml  openapi.yaml
include/: ble_module.hpp  can_bus.hpp  can_db.hpp  can_ids.hpp  can_iface.hpp  common.hpp  event_bus.hpp  log_sink.hpp  nfc_module.hpp  orchestrator.hpp  sequencer.hpp  shared_mem.hpp  tcu_store.hpp
lambdas/: package-layer.py
lambdas/auth-ble/: index.js
lambdas/auth-nfc/: index.js
lambdas/auth-nfc-verify/: index.js
lambdas/auth-result/: index.js
lambdas/bookings/: README.md  index.js  package.json  validators.js
lambdas/facedata/: Dockerfile  requirements.txt
lambdas/health/: index.js
lambdas/layer_build/nodejs/: package.json
lambdas/measure/: download_models.py  lambda_handler.py
lambdas/profiles/: create_table.sql
lambdas/recommend/: Dockerfile  car_fit_model.joblib  json_template.json  lambda_handler.py  requirements.txt
lambdas/shared/: utils.js
lambdas/user-profile/: README.md  db.js  index.js  package.json
lambdas/vehicle-control/: README.md  index.js  package.json
lambdas/vehicles/: index.js  package.json
nfc/: CMakeLists.txt  nfc_adapter.cpp  nfc_adapter.hpp  nfc_reader.cpp  nfc_reader.hpp
scripts/: Debug-Lambda.ps1  Deploy-Complete-Platform.ps1  Get-RDSNetworkConfig.ps1  README.md  Test-AI-Services.ps1  build_all.sh  deploy-config.template.json  run_ble.sh  run_ble_sca.sh  run_can_down.sh  run_can_router.sh  run_can_up.sh  run_nfc.sh  run_router.sh
scripts/deploy/: deploy.ps1  rebuild_facedata.ps1  rebuild_measure.ps1  rebuild_recommend.ps1
src/: CMakeLists.txt  ble_module.cpp  can_db.cpp  can_iface.cpp  common.cpp  event_bus.cpp  facedata.py  log_sink.cpp  main.cpp  nfc_module.cpp  orchestrator.cpp  sequencer.cpp  tcu_main.c  workers.cpp
tests/: router_canapi.cpp  rpi_can_router.cpp  sca_ble_peripheral  sca_ble_peripheral.cpp  smoke_test.cpp  test_ble_log.cpp  test_nfc_log.cpp
web/src/: index.css
(+220 files in other folders)
